<resources>
    <string name="app_name">Money Converter</string>
    <string name="appName">Currency Converter</string>
    <string name="value">Value</string>
    <string name="convertFrom">Convert From:</string>
    <string name="to">To:</string>
    <string name="convert">Convert</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="saveSuccess">Item saved successfully!</string>
    <string name="finalValue">Final value :</string>
    <string name="from">From:</string>
    <string name="bid">Bid:</string>
</resources>